k8s/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: country-info
  labels:
    app.kubernetes.io/name: country-info-service
    environment: production
