k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: country-info-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: country-info-app
  template:
    metadata:
      labels:
        app: country-info-app
    spec:
      containers:
        - name: country-info-app
          image: country-info-app:latest
          ports:
            - containerPort: 8080
