k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: country-info-service
spec:
  selector:
    app: country-info-app
  ports:
    - port: 80
      targetPort: 8080
  type: LoadBalancer
